--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Minesweeper</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="minesweeper.min.css"/>
+        <link rel="stylesheet" href="css/minesweeper.css"/>
         <link rel="shortcut icon" href="favicon.png" type="image/png"/>
     </head>
     <body>
@@ -30,6 +30,8 @@
                 <button type="button" class="close" id="records-close">Close</button>
             </div>
         </div>
-        <script src="minesweeper.min.js"></script>
+        <script src="js/records.js"></script>
+        <script src="js/canvas.js"></script>
+        <script src="js/minesweeper.js"></script>
     </body>
 </html>
