--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Minesweeper JS
-     v1.0.0
+     v1.0.2
      Israel Muñoz <israel.munoz.v@gmail.com>
      https://github.com/israel-munoz/minesweeper-js
 -->
@@ -15,7 +15,7 @@
     <body>
         <canvas id="container" class="canvas"></canvas>
         <button type="button" id="records-show" class="records-show">Records</button>
-        <div id="records" class="records">
+        <div id="records-list" class="records">
             <div class="records-panel">
                 <h2>Records</h2>
                 <table>
